# local_rag

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  pyproject.toml
scripts/: chat.py  example_usage.py  ingest_documents.py
src/local_rag/: __init__.py  config.py  embeddings.py  generator.py  pdf_processor.py  pipeline.py  vectorstore.py
tests/: __init__.py  test_ingestion.py  test_pipeline.py
